objects/User.object
<CustomObject>
    <fields>
        <fullName>QIDC__MDM_Available_Countries_ims__c</fullName>
        <label>MDM Available Countries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__MDM_Preferred_Country_ims__c</fullName>
        <label>MDM Preferred Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__OK_Available_Countries_ims__c</fullName>
        <label>OneKey Available Countries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__OK_Preferred_Country_ims__c</fullName>
        <label>OneKey Preferred Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__OrgManagerId_IMS__c</fullName>
        <description>Org Manager Id</description>
        <externalId>true</externalId>
        <label>Org Manager Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>biosmart_id__c</fullName>
        <externalId>true</externalId>
        <label>BIOSMART ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>brady_certification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brady Certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>can_session_id__c</fullName>
        <label>CAN Session Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__API_URL__c</fullName>
        <formula>$Api.Partner_Server_URL_290</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>API_URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Hide_Copado_feedback__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The visibility of the message asking users to rate &amp; feedback Copado on the AppExchange is controlled here.</inlineHelpText>
        <label>Hide Copado feedback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cost_center__c</fullName>
        <label>Cost Center</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crm_region__c</fullName>
        <description>US organizational region for CRM sales</description>
        <label>CRM Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crm_region_id__c</fullName>
        <description>US organizational region code for CRM sales</description>
        <label>CRM Region ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>crt_certification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CRT Certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>employee_group__c</fullName>
        <description>Identifies what group (type of employment/relationship) the person has with BIOTRONIK Combinations of Employee Group/employee subgroup could be used to request specific people and filter people out.  I.e. BINC sales rep employee group 1 (Active employee).</description>
        <label>Employee Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>employee_group_id__c</fullName>
        <description>Identifies what group ID the person has with BIOTRONIK.</description>
        <label>Employee Group ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>employee_subgroup__c</fullName>
        <description>Identifies what subgroup (type of employement/relationship) the person has with BIOTRONIK.  Combinations of Employee Group/employee subgroup could be used to request specific people and filter people out.  I.e. direct sales rep = employe subgroup (ee subgroup) = 50 (Indirect EE/exempt).</description>
        <label>Employee Subgroup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>employee_subgroup_id__c</fullName>
        <description>Identifies what subgroup ID the person has with BIOTRONIK.</description>
        <label>Employee Subgroup ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>health_professional__c</fullName>
        <description>3500a Question E2.  Used in the MDR process when a Complaint is linked to the Initial Reporter.</description>
        <label>Health Professional</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>is_service_resource__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Service Resource</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>locator__c</fullName>
        <formula>TEXT(sap_company_code__c) &amp;&apos; | &apos; &amp; Profile.Name</formula>
        <label>Locator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>manager_vi__c</fullName>
        <label>Manager VI</label>
        <relationshipName>VI_Heirarchy_Users</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>preferred_name__c</fullName>
        <label>Preferred Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>salutation__c</fullName>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Herr</fullName>
                </value>
                <value>
                    <fullName>Frau</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sap_company_code__c</fullName>
        <description>All org units in SAP are uniquely identified with a company name and a company code with 4 digits, see API-Names.</description>
        <label>Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>sap_no__c</fullName>
        <externalId>true</externalId>
        <label>SAP Customer Number</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>sap_person_id__c</fullName>
        <description>Unique identifier for each BIOTRONIK person</description>
        <label>Person ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shipping_city__c</fullName>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shipping_country__c</fullName>
        <label>Shipping Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shipping_state_province__c</fullName>
        <label>Shipping State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shipping_street__c</fullName>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>shipping_zip_postal_code__c</fullName>
        <label>Shipping Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>start_date__c</fullName>
        <description>Date of employment start.  Used to determine when to turn on access.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>trachy_certification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tachy Certification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>unique_count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>user_division__c</fullName>
        <label>User Division</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CRM</fullName>
                </value>
                <value>
                    <fullName>CVI</fullName>
                </value>
                <value>
                    <fullName>PVI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vi_area__c</fullName>
        <description>US organizational region for VI sales</description>
        <label>VI Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vi_area_id__c</fullName>
        <description>US organizational region code for VI sales</description>
        <label>VI Area ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vi_certification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator of whether employee VI certification is current.  Used to control who can get what types of product inventory.</description>
        <label>VI Certification</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Sales_Reps</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sap_no__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Sales Reps</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>User_Country</fullName>
        <active>true</active>
        <description>SAFBIO-1632</description>
        <errorConditionFormula>ISBLANK(Country)</errorConditionFormula>
        <errorMessage>Please enter a Country</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_First_Name</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(FirstName, &quot;\\p{Lu}.*&quot;))</errorConditionFormula>
        <errorMessage>Please use capitalize letter for First Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_Last_Name</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(LastName, &quot;\\p{Lu}.*&quot;))</errorConditionFormula>
        <errorMessage>Please use capitalize letter for Last Name</errorMessage>
    </validationRules>
</CustomObject>